fix select color on mobiles

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -96,6 +96,7 @@ hr {
 button, input, select, textarea {
     font-family: inherit;
     font-size: 100%;
+    background-color: #FFFFFF;
 }
 
 .story-choice-form select {
